# audio_scratchpad_old

./: CustomSineWavePlayer.cpp  CustomSineWavePlayer.h  README.md  custom_sine_wave_main.cpp  freq2midi.c  midi2freq.c  midi_to_freq.h  simple_audio_array.cpp  uiMidi2Freq.c  user_input.c
CoreAudioLearning/ca_1_1/ca_1_1/: main.m
CoreAudioLearning/ca_1_1/ca_1_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_2_1/ca_2_1/: main.m
CoreAudioLearning/ca_2_1/ca_2_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_3_1/ca_3_1/: main.m
CoreAudioLearning/ca_3_1/ca_3_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_3_1_s/ca_3_1_s/: main.swift
CoreAudioLearning/ca_3_1_s/ca_3_1_s.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_4_1/ca_4_1/: main.m
CoreAudioLearning/ca_4_1/ca_4_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_5_1/ca_5_1/: main.m
CoreAudioLearning/ca_5_1/ca_5_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_6_1/ca_6_1/: main.m
CoreAudioLearning/ca_6_1/ca_6_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_7_1/ca_7_1/: main.m
CoreAudioLearning/ca_7_1/ca_7_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_7_2/ca_7_2/: main.m
CoreAudioLearning/ca_7_2/ca_7_2.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_7_3/ca_7_3/: main.m
CoreAudioLearning/ca_7_3/ca_7_3.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_8_1/ca_8_1/: main.mm
CoreAudioLearning/ca_8_1/ca_8_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_8_AUGraphInput_s/ca_8_AUGraphInput_s/: CARingBuffer.swift  main.swift
CoreAudioLearning/ca_8_AUGraphInput_s/ca_8_AUGraphInput_s.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_9_1/ca_9_1/: main.m
CoreAudioLearning/ca_9_1/ca_9_1.xcodeproj/: project.pbxproj
CoreAudioLearning/ca_9_2/ca_9_2/: main.m
CoreAudioLearning/ca_9_2/ca_9_2.xcodeproj/: project.pbxproj
SynthPlugin/SynthPlugin/: Info.plist  SynthPlugin.cpp  SynthPlugin.exp  SynthPlugin.hpp  SynthPlugin.r  prefix.pch
SynthPlugin/SynthPlugin.xcodeproj/: project.pbxproj
SynthPlugin/SynthPlugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SynthPlugin/SynthPlugin/AUBase/: AUBase.cpp  AUBase.h  AUDispatch.cpp  AUDispatch.h  AUInputElement.cpp  AUInputElement.h  AUOutputElement.cpp  AUOutputElement.h  AUPlugInDispatch.cpp  AUPlugInDispatch.h  AUResources.r  AUScopeElement.cpp  AUScopeElement.h  ComponentBase.cpp  ComponentBase.h
SynthPlugin/SynthPlugin/AUInstrumentBase/: AUInstrumentBase.cpp  AUInstrumentBase.h  LockFreeFIFO.h  MIDIControlHandler.h  SynthElement.cpp  SynthElement.h  SynthEvent.h  SynthNote.cpp  SynthNote.h  SynthNoteList.cpp  SynthNoteList.h
SynthPlugin/SynthPlugin/OtherBases/: AUEffectBase.cpp  AUEffectBase.h  AUMIDIBase.cpp  AUMIDIBase.h  AUMIDIEffectBase.cpp  AUMIDIEffectBase.h  AUOutputBase.cpp  AUOutputBase.h  AUPannerBase.cpp  AUPannerBase.h  MusicDeviceBase.cpp  MusicDeviceBase.h
SynthPlugin/SynthPlugin/PublicUtility/: AUOutputBL.cpp  AUOutputBL.h  AUParamInfo.cpp  AUParamInfo.h  CAAUMIDIMap.cpp  CAAUMIDIMap.h  CAAUMIDIMapManager.cpp  CAAUMIDIMapManager.h  CAAUParameter.cpp  CAAUParameter.h  CAAUProcessor.cpp  CAAUProcessor.h  CAAtomic.h  CAAtomicStack.h  CAAudioBufferList.cpp  CAAudioBufferList.h  CAAudioChannelLayout.cpp  CAAudioChannelLayout.h  CAAudioChannelLayoutObject.cpp  CAAudioFileFormats.cpp  CAAudioFileFormats.h  CAAudioTimeStamp.cpp  CAAudioTimeStamp.h  CAAudioUnit.cpp  CAAudioUnit.h  CAAudioUnitOutputCapturer.h  CAAudioValueRange.cpp  CAAudioValueRange.h  CAAutoDisposer.h  CABitOperations.h  CABool.h  CABufferList.cpp  CABufferList.h  CABundleLocker.cpp  CABundleLocker.h  CAByteOrder.h  CACFArray.cpp  CACFArray.h  CACFData.h  (+77 more)
afx_plugins/: CMakeLists.txt
afx_plugins/BPBSFilterII/: BPBSFilterII.cpp  BPBSFilterII.h  RAFXPlugInContainer.h  RackAFX.uidesc  RackAFXDLL.cpp  RackAFXDLL.h  lookuptables.h  plugin.cpp  plugin.h  pluginconstants.h  pluginobjects.cpp  synthfunctions.h  vst3plug.def
afx_plugins/ConvolveIt.1.1/: ConvolveIt.cpp  ConvolveIt.h  RackAFXDLL.cpp  RackAFXDLL.h  plugin.cpp  plugin.h  pluginconstants.h
afx_plugins/DimensionChorus/: DDLModule.cpp  DDLModule.h  DimensionChorus.cpp  DimensionChorus.h  ModDelayModule.cpp  ModDelayModule.h  RackAFXDLL.cpp  RackAFXDLL.h  WTOscillator.cpp  WTOscillator.h
afx_plugins/MoogLPF/: MoogFilterStage.cpp  MoogFilterStage.h  MoogLPF.cpp  MoogLPF.h  MoogLadderFilter.cpp  MoogLadderFilter.h  RackAFXDLL.cpp  RackAFXDLL.h
afx_plugins/ResonantLPFmkII/: Delay.cpp  RackAFXDLL.h  ResonantLPF.cpp  ResonantLPF.h
audio_programming/: 2_1_2.c  2_1_3_ex.c  2_1_3_osc.c  2_1_4.c
audio_programming/ch_1/: 1_2_main.c  1_3_main.c  1_4_main.c  1_6_10_main.c  1_7_4_main.c  1_8_1_main.c  1_8_2_main.c  1_9_3_main.c  1_9_4_main.c  1_9_5_main.c  CMakeLists.txt
audio_programming/ch_2/: CMakeLists.txt  sf2float  sf2float.c  sf2float_orig.c  test_out.aiff
audio_programming/portsf/: CMakeLists.txt
audio_signal_processing/: A1Part1.py  A1Part2.py  A1Part3.py  A1Part4.py  A2Part1.py  A2Part2.py  A2Part3.py  A2Part4.py  A2Part5.py  A3Part1.py  submitA1.py  submitA2.py  submitA3.py  test_A1.py
audiooutput/: CMakeLists.txt  audiooutput.cpp  audiooutput.h  audiooutput.pro  audiooutput.ui  main.cpp
installation/TimelinesMod/: TimelinesMod.maxproj
installation/socket-client/: client.js  package.json  server.js
juce_tests/juce_cli_test/: JuceCLITest.jucer
juce_tests/juce_hello_world/: CMakeLists.txt
juce_tests/juce_plugin_test/: juce_plugin_test.jucer
juce_tests/juce_test/: CMakeLists.txt  MainContentComponent.cpp  main.cpp
juce_tests/juce_two/: CMakeLists.txt  tutorial_simple_synth_noise.jucer
juce_tests/juce_two/Builds/MacOSX/: Info.plist
juce_tests/juce_two/Builds/MacOSX/SimpleSynthNoiseTutorial.xcodeproj/: project.pbxproj
juce_tests/juce_two/Builds/VisualStudio2010/: SimpleSynthNoiseTutorial.sln  SimpleSynthNoiseTutorial.vcxproj  SimpleSynthNoiseTutorial.vcxproj.filters  resources.rc
juce_tests/juce_two/JuceLibraryCode/: AppConfig.h  JuceHeader.h
juce_tests/juce_two/Source/: Main.cpp  MainComponent.cpp  MainComponent_02.cpp  MainComponent_03.cpp
(+306 files in other folders)
