cmake_minimum_required(VERSION 3.3)
project(audio_programming)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(1_2 1_2_main.c)

add_executable(1_3 1_3_main.c)

add_executable(1_4 1_4_main.c)

add_executable(1_6_10 1_6_10_main.c)

add_executable(1_7_4 1_7_4_main.c)

add_executable(1_8_1 1_8_1_main.c)

add_executable(1_8_2 1_8_2_main.c)

add_executable(1_9_3 1_9_3_main.c)
add_executable(1_9_4 1_9_4_main.c)
add_executable(1_9_5 1_9_5_main.c)

